--- a/trn03/css/common.css
+++ b/trn03/css/common.css
@@ -274,6 +274,7 @@ header .submenu .sub_real_menu ul li a:hover::after {
   transition: 2.3s;
 }
 .visual_slider .swiper-slide {
+  padding: 0 30px;
   max-width: 950px;
   opacity: 0.3;
   transition: 0.3s;
@@ -568,22 +569,21 @@ header .submenu .sub_real_menu ul li a:hover::after {
   right: 0;
 }
 .event .tab_top .js-marquee > div {
-  float: left;
   gap: 30px;
   flex: 0 0 auto;
   white-space: nowrap;
-  overflow: hidden;
-  animation: marquee 40s linear infinite;
+  position: relative;
 }
-.event .tab_top .js-marquee span {
-  display: inline-block;
+.event .tab_top .js-marquee > div span {
+  display: inline-flex;
   overflow: hidden;
   border-radius: 50%;
+  animation: marquee 5s linear infinite;
 }
-.event .tab_top .js-marquee span:nth-child(odd) {
+.event .tab_top .js-marquee > div span:nth-child(odd) {
   transform: rotate(-20deg);
 }
-.event .tab_top .js-marquee span:nth-child(even) {
+.event .tab_top .js-marquee > div span:nth-child(even) {
   transform: rotate(20deg);
 }
 .event .tab_top .js-marquee.on {
@@ -619,6 +619,11 @@ header .submenu .sub_real_menu ul li a:hover::after {
   display: block;
 }
 
+.footer {
+  flex-direction: column;
+  justify-content: center;
+}
+
 @keyframes rotate {
   0% {
     transform: translateY(10px);
@@ -632,12 +637,18 @@ header .submenu .sub_real_menu ul li a:hover::after {
 }
 @keyframes marquee {
   0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+    transform: translateX(0);
   }
   100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
+    transform: translateX(-100%);
+  }
+}
+@keyframes marquee-r {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
   }
 }
 
